--- a/MAINinfra/Jenkinsfile
+++ b/MAINinfra/Jenkinsfile
@@ -1,15 +1,15 @@
 pipeline {
     agent any
     environment {
-        AWS_ACCOUNT_ID = credentials('ACCOUNTID')
+        AWS_ACCOUNT_ID = credentials('account_id')
         AWS_DEFAULT_REGION="us-east-1"     
     }
         
     stages {
         stage('Infrastructure Deployment') {
            environment { 
-             AWS_ACCESS_KEY_ID = credentials('ACCESSkey')
-             AWS_SECRET_ACCESS_KEY = credentials('SECRETkey')
+             AWS_ACCESS_KEY_ID = credentials('Anike')
+             AWS_SECRET_ACCESS_KEY = credentials('Anike')
            }
            steps {
               script {
